<resources>
    <string name="app_name">EsayMart</string>

    <string name="action_notifications">Notifications</string>

    <string name="gps_settings_disabled">GPS SETTINGS DISABLED</string>


    <string name="choose_yes_on_dialog">
    You must have to accept changes on Location settings to get your current location.
    </string>
    <string name="location_denied_marsh">You must have to allow this app to access device\'s location to get your current location. If you check "Never ask again", give permission to your app in app settings manually.</string>
    <string name="device_not_supported">This device does not have Google Play Services</string>
    <string name="location_access_denied">LOCATION ACCESS DENIED</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking you agree all the </string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">154674845179350</string>
    <string name="fb_login_protocol_scheme">fb1065828690183627</string>
    <string name="cancel_login">cancel_login</string>
    <string name="error_login">error_login</string>
    <string name="logout">logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_service_location">Map</string>
    <string name="spinner_title">Qty</string>
    <string name="title_activity_home__cleaning">Home_CleaningActivity</string>

    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="incorrect_Password">Incorrect Password</string>
</resources>
